# ProjectIO

./: .gitignore  README.md  exactint.html  index.html  script.js  styles.css
api/: README.md  custom_exceptions.py  db.sqlite3  requirements.txt
api/api/: settings.py  urls.py
api/calculator/: urls.py  views.py
api/calculator_functions/: calculate_graph.py  default_calculator_params.py  indefinite_integration.py  other_functions.py
api/gallery/: models.py  serializers.py  urls.py  views.py
api/gallery/migrations/: 0001_initial.py  0002_galleryentry_variable_name.py
backend/: CMakeLists.txt  rk4_test_output.txt
backend/src/: .gitignore  CMakeLists.txt  NumInt.TrapezoidQ.cpp  conventions.hpp  num.DESolvers.cpp  num.DESolvers.hpp  num.Integrals.hpp
backend/src/Global/: expr_handler.cpp  expr_handler.hpp
backend/src/IndefInt/: indefinite_integration.py
backend/src/MainHeaders/: main_definitions.hpp
backend/src/NumInt/: NumInt.Gauss.cpp  NumInt.TrapezoidQ.cpp  num.Integrals.hpp
backend/src/NumODE/: num.DESolvers.cpp  num.DESolvers.hpp
backend/tests/: .gitignore  CMakeLists.txt  plot.p  rk4_test  rk4_test.cpp  rk4_test_output.txt
backend/tests/src/: Domain_integration.cpp  GaussChebyshev_integral_test.cpp  GaussHermiteQdrtr_node_test.cpp  GaussHermite_integral_test.cpp  GaussIntegral_test.cpp  Integrator_test.cpp  rk_test.cpp  romberg_int.cpp  tester.hpp  trapezoid_int.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  URLconfig.ts  calculatorSettings.ts  index.tsx  mathOutputFunctions.tsx  otherFunctions.ts  styles.css
frontend/src/components/: AntiderivativeGraphsCalculator.tsx  BigGraph.tsx  ErrorPage.tsx  ExactIntCalculator.tsx  Gallery.tsx  Header.tsx  HeaderToast.tsx  IntValueCalculator.tsx  MainPage.tsx  Settings.tsx  TestAPI.tsx  TestNum.tsx
frontend/src/components/graphs/: BigGraph.tsx  GalleryGraph.tsx  JSXGraph.tsx
pybind/: CMakeLists.txt  NumInt.cpp  README.md  conventions.hpp  example.cpp  num.DESolvers.cpp  num.DESolvers.hpp  num.Integrals.hpp  numInt.TrapezoidQ.cpp
